container fluid background

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      
       <div class="container-fluid custom-background">
         <a class="navbar-brand" href="#"
           ><img src="/images/Census_Tree_logo_WH.png" style="width: 150px"
@@ -83,7 +84,7 @@
 
     <!-- Main Container -->
 
-    <div class="container custom-background">
+    <div class="container-fluid custom-background p-1 mt-1">
       <h1 class="text-center p-1 mb-1 mt-1 custom-color">Census Tree</h1>
       <div class="row">
         <div class="col-sm-6">
@@ -131,30 +132,30 @@
       </div>
 
       <h3 id="Resources" class="fs-1 p-5 mt-5 mb-5 text-center">
-        <img src="/images/resources-with-logo.png" style="width: 40%" />
+        <img src="/images/resources-with-logo.png" style="width: 30%" />
       </h3>
       <div class="w-100 p-5 mt-1 mb-5">
         <div class="row mt-5 mb-5">
           <div class="col-sm-4">
-            <img src="/images/quick-start-guide.png" , style="width: 100%" />
+            <img src="/images/quick-start-guide.png" , style="width: 80%" />
           </div>
           <div class="col-sm-4">
-            <img src="/images/methodology.png" style="width: 100%" />
+            <img src="/images/methodology.png" style="width: 80%" />
           </div>
           <div class="col-sm-4">
-            <img src="/images/faq.png" style="width: 100%" />
+            <img src="/images/faq.png" style="width: 80%" />
           </div>
         </div>
 
         <div class="row mt-5 mb-5">
           <div class="col-sm-4">
-            <img src="/images/video-tutorials.png" style="width: 100%" />
+            <img src="/images/video-tutorials.png" style="width: 80%" />
           </div>
           <div class="col-sm-4">
-            <img src="/images/research.png" style="width: 100%" />
+            <img src="/images/research.png" style="width: 80%" />
           </div>
           <div class="col-sm-4">
-            <img src="/images/how-to-cite.png" style="width: 100%" />
+            <img src="/images/how-to-cite.png" style="width: 80%" />
           </div>
         </div>
       </div>
@@ -162,7 +163,7 @@
     <!-- End of Main Container -->
 
     <!-- Footer -->
-    <footer class="mt-5 p-5 text-white custom-background">
+    <footer class="mt-1 p-1 text-white custom-background">
       <h4>
         <img
           src="/images/acknowledgements-with-logo.png"
