--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Build a Webpage Using Bootstrap 5</title>
+    <title>Census Tree</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +24,6 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      
       <div class="container-fluid custom-background">
         <a class="navbar-brand" href="#"
           ><img src="/images/Census_Tree_logo_WH.png" style="width: 150px"
@@ -63,7 +62,11 @@
                 <a class="nav-link" href="#Resources">Resources</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
+                <a
+                  class="nav-link"
+                  href="https://sites.google.com/view/family-tree-faq/home"
+                  >FAQ</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -131,8 +134,8 @@
         </div>
       </div>
 
-      <h3 id="Resources" class="fs-1 p-5 mt-5 mb-5 text-center">
-        <img src="/images/resources-with-logo.png" style="width: 30%" />
+      <h3 id="Resources" class="fs-1 p-5 mt-5 mb-1 text-left">
+        <img src="/images/resources-with-logo.png" style="width: 20%" />
       </h3>
       <div class="w-100 p-5 mt-1 mb-5">
         <div class="row mt-5 mb-5">
@@ -173,9 +176,14 @@
       <p class="text-center">
         This work was supported by the National Science Foundation (Grant
         #XXXXX) and the Russell Sage Foundation (#GXXXX). We are grateful for
-        the excellant work of research assistants at the Brigham Young
-        University Record Linking Lab and the Department of Economics at the
-        University of Notre Dame.
+        the excellant work of research assistants at the
+        <a class="text-white" href="https://www.byu.edu/"
+          >Brigham Young University</a
+        >
+        <a class="text-white" href="https://rll.byu.edu/">
+          Record Linking Lab</a
+        >
+        and the Department of Economics at the University of Notre Dame.
       </p>
     </footer>
 
