--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle text-white mt-3"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -59,21 +59,21 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#Resources">Resources</a>
+                <a class="nav-link text-white mt-3" href="#Resources">Resources</a>
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white mt-3"
                   href="https://sites.google.com/view/family-tree-faq/home"
                   >FAQ</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link text-white mt-3 lead-font-size" href="#">Contact</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="get_the_data.html"
                   ><img
                     src="/images/get-the-data-button.png"
                     style="width: 130px; height: 70px"
@@ -183,7 +183,9 @@
         <a class="text-white" href="https://rll.byu.edu/">
           Record Linking Lab</a
         >
-        and the Department of Economics at the University of Notre Dame.
+        and the
+        <a class="text-white" href="https://economics.nd.edu/">Department of Economics</a> at the
+        <a class="text-white" href="https://www.nd.edu/">University of Notre Dame</a>.
       </p>
     </footer>
 
