--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Census Tree</title>
+    <title>Census Tree: About</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +16,10 @@
         background-color: #3b5d80;
       }
 
+      .custom-blue {
+        color: #3b5d80;
+      }
+
       .custom-color {
         color: #b8d637;
       }
@@ -25,7 +29,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid custom-background">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img src="/images/Census_Tree_logo_WH.png" style="width: 150px"
         /></a>
         <button
@@ -45,7 +49,7 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle text-white mt-3"
-                  href="about.html"
+                  href="#"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -59,7 +63,9 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="#Resources">Resources</a>
+                <a class="nav-link text-white mt-3" href="index.html"
+                  >Resources</a
+                >
               </li>
               <li class="nav-item">
                 <a
@@ -86,83 +92,38 @@
     </nav>
 
     <!-- Main Container -->
-
-    <div class="container-fluid custom-background p-1 mt-1">
-      <h1 class="text-center p-1 mb-1 mt-1 custom-color">Census Tree</h1>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="w-100 p-5 mt-1 mb-1">
-            <img src="/images/img1.png" style="width: 100%" />
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="w-100 p-5 mt-1 mb-1">
-            <h3 class="custom-color">What is the Census Tree?</h3>
-            <p class="text-white">
-              The Census Tree is a database with over 600 million record links
-              that connect people in the historical United States
-              censuses(1850-1940).
-            </p>
-
-            <h3 class="custom-color">Why was it created?</h3>
-            <p class="text-white">
-              These links will allow academic researchers to follow men and
-              women throughout their lives, and to connect people to their
-              family members and others. These links are essential for research
-              on important topics like intergenerational mobility, the effects
-              of early life experiences, and the impacts of public policy.
-            </p>
-
-            <h3 class="custom-color">Who is included?</h3>
-            <p class="text-white">
-              In a breakthrough for social sciences research, nearly half of the
-              Census Tree links are for women. And because the Census Tree
-              contains an unprecedented number of links, it includes large
-              samples of people from underrepresented groups, including Black
-              Americans.
-            </p>
-
-            <h3 class="custom-color">How is this possible?</h3>
-            <p class="text-white">
-              Many of the links in the Census Tree were created by people doing
-              research on their own family histories, using the genealogy
-              platform FamilySearch.org. We then build on these links using both
-              traditional matching strategies and machine learning. Learn more
-              here.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <h3 id="Resources" class="fs-1 p-5 mt-5 mb-1 text-left">
-        <img src="/images/resources-with-logo.png" style="width: 20%" />
-      </h3>
-      <div class="w-100 p-5 mt-1 mb-5">
-        <div class="row mt-5 mb-5">
-          <div class="col-sm-4">
-            <img src="/images/quick-start-guide.png" , style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/methodology.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/faq.png" style="width: 80%" />
-          </div>
+    <div class="container p-5 mt-1 ml-1 mb-5">
+        <div class="about-logo p-1 ml-1 mt-5 mb-5">
+            <img
+                    src="/images/about-with-logo.png"
+                    style="width: 120px; height: 50px"
+                />
         </div>
 
-        <div class="row mt-5 mb-5">
-          <div class="col-sm-4">
-            <img src="/images/video-tutorials.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/research.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/how-to-cite.png" style="width: 80%" />
-          </div>
+        <div class="textcontent text-left">
+            <h5 class="custom-blue">The Census Tree</h5>
+            <p class="custom-blue">Lorem ipsum blah blah blah</p>
         </div>
-      </div>
+
+        <div class="textcontent text-left ">
+            <h5 class="custom-blue">The Census Tree Team</h5>
+            <p class="custom-blue">Lorem ipsum blah blah blah</p>
+        </div>
+
+        <div class="textcontent text-left ">
+            <h5 class="custom-blue">Our Supporters</h5>
+            <p class="custom-blue">Lorem ipsum blah blah blah</p>
+        </div>
+
+        <div class="textcontent text-left ">
+            <h5 class="custom-blue">How to cite</h5>
+            <p class="custom-blue">Lorem ipsum blah blah blah</p>
+        </div>
+
+
     </div>
+
+    
     <!-- End of Main Container -->
 
     <!-- Footer -->
@@ -184,8 +145,13 @@
           Record Linking Lab</a
         >
         and the
-        <a class="text-white" href="https://economics.nd.edu/">Department of Economics</a> at the
-        <a class="text-white" href="https://www.nd.edu/">University of Notre Dame</a>.
+        <a class="text-white" href="https://economics.nd.edu/"
+          >Department of Economics</a
+        >
+        at the
+        <a class="text-white" href="https://www.nd.edu/"
+          >University of Notre Dame</a
+        >.
       </p>
     </footer>
 
