--- a/get_the_data.html
+++ b/get_the_data.html
@@ -45,7 +45,7 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle text-white mt-3"
-                  href="#"
+                  href="about.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -53,7 +53,7 @@
                   About
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Overview</a></li>
+                  <li><a class="dropdown-item" href="about.html">Overview</a></li>
                   <li><a class="dropdown-item" href="#">Our Team</a></li>
                 </ul>
               </li>
@@ -75,7 +75,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="get_the_data.html"
                   ><img
                     src="/images/get-the-data-button.png"
                     style="width: 130px; height: 70px"
@@ -89,7 +89,7 @@
 
     <!-- Main Container -->
 
-    <div class="container-fluid custom-background p-1 mt-1">
+    <div class="container-fluid custom-background p-1 mt-1 mb-5">
       <h3 class="text-left text-white p-2 mb-1 mt-1">Access the links</h3>
       <div class="row">
         <div class="col-md-8 table-container ml-5">
@@ -458,7 +458,7 @@
     <!-- End of Main Container -->
 
     <!-- Footer -->
-    <footer class="mt-1 p-1 text-white custom-background">
+    <footer class="mt-1 mb-1 p-1 text-white custom-background">
       <h4>
         <img
           src="/images/acknowledgements-with-logo.png"
