--- a/about.html
+++ b/about.html
@@ -10,28 +10,22 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-
-    <style>
-      .custom-background {
-        background-color: #3b5d80;
-      }
-
-      .custom-blue {
-        color: #3b5d80;
-      }
-
-      .custom-color {
-        color: #b8d637;
-      }
-    </style>
+    <link rel="stylesheet" , href="style.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid custom-background">
-        <a class="navbar-brand" href="index.html"
-          ><img src="/images/Census_Tree_logo_WH.png" style="width: 150px"
-        /></a>
+        <div class="row">
+          <div class="col-sm-4">
+            <a class="navbar-brand" href="#"
+              ><img src="/images/Census_Tree_only_WH.png" style="width: 150px"
+            /></a>
+          </div>
+          <div class="col-sm-8">
+            <h1 class="mt-4 text-white">Census Tree</h1>
+          </div>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
