--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-
-    <style>
-      .custom-background {
-        background-color: #3b5d80;
-      }
-
-      .custom-color {
-        color: #b8d637;
-      }
-    </style>
+    <link rel="stylesheet" , href="style.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid custom-background">
-        <a class="navbar-brand" href="#"
-          ><img src="/images/Census_Tree_logo_WH.png" style="width: 150px"
-        /></a>
+        <div class="row">
+          <div class="col-sm-4">
+            <a class="navbar-brand" href="#"
+              ><img src="/images/Census_Tree_only_WH.png" style="width: 150px"
+            /></a>
+          </div>
+          <div class="col-sm-8">
+            <h1 class="mt-4 text-white">Census Tree</h1>
+          </div>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,13 +51,17 @@
                   About
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="about.html">Overview</a></li>
+                  <li>
+                    <a class="dropdown-item" href="about.html">Overview</a>
+                  </li>
                   <li><a class="dropdown-item" href="#">Our Team</a></li>
                 </ul>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="#Resources">Resources</a>
+                <a class="nav-link text-white mt-3" href="#Resources"
+                  >Resources</a
+                >
               </li>
               <li class="nav-item">
                 <a
@@ -88,7 +90,7 @@
     <!-- Main Container -->
 
     <div class="container-fluid custom-background p-1 mt-1">
-      <h1 class="text-center p-1 mb-1 mt-1 custom-color">Census Tree</h1>
+      
       <div class="row">
         <div class="col-sm-6">
           <div class="w-100 p-5 mt-1 mb-1">
@@ -184,8 +186,13 @@
           Record Linking Lab</a
         >
         and the
-        <a class="text-white" href="https://economics.nd.edu/">Department of Economics</a> at the
-        <a class="text-white" href="https://www.nd.edu/">University of Notre Dame</a>.
+        <a class="text-white" href="https://economics.nd.edu/"
+          >Department of Economics</a
+        >
+        at the
+        <a class="text-white" href="https://www.nd.edu/"
+          >University of Notre Dame</a
+        >.
       </p>
     </footer>
 
