new changes-resources dropdown option and white border fixed

--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-1 p-0">
       <div class="container-fluid custom-background">
         <div class="row">
           <div class="col-sm-4">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><img src="/images/Census_Tree_only_WH.png" style="width: 150px"
             /></a>
           </div>
@@ -51,16 +51,38 @@
                   About
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="about.html">Overview</a></li>
+                  <li>
+                    <a class="dropdown-item" href="about.html">Overview</a>
+                  </li>
                   <li><a class="dropdown-item" href="#">Our Team</a></li>
                 </ul>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="index.html"
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-white mt-3"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
                   >Resources</a
                 >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Quick Start Guide</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Methodology</a></li>
+                  <li><a class="dropdown-item" href="#">FAQ</a></li>
+                  <li><a class="dropdown-item" href="#">Video Tutorials</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      >Research Using the Census Tree</a
+                    >
+                  </li>
+                  <li><a class="dropdown-item" href="#">How to Cite?</a></li>
+                </ul>
               </li>
+
               <li class="nav-item">
                 <a
                   class="nav-link text-white mt-3"
@@ -87,37 +109,34 @@
 
     <!-- Main Container -->
     <div class="container p-5 mt-1 ml-1 mb-5">
-        <div class="about-logo p-1 ml-1 mt-5 mb-5">
-            <img
-                    src="/images/about-with-logo.png"
-                    style="width: 120px; height: 50px"
-                />
-        </div>
+      <div class="about-logo p-1 ml-1 mt-5 mb-5">
+        <img
+          src="/images/about-with-logo.png"
+          style="width: 120px; height: 50px"
+        />
+      </div>
 
-        <div class="textcontent text-left">
-            <h5 class="custom-blue">The Census Tree</h5>
-            <p class="custom-blue">Lorem ipsum blah blah blah</p>
-        </div>
+      <div class="textcontent text-left">
+        <h5 class="custom-blue">The Census Tree</h5>
+        <p class="custom-blue">Lorem ipsum blah blah blah</p>
+      </div>
 
-        <div class="textcontent text-left ">
-            <h5 class="custom-blue">The Census Tree Team</h5>
-            <p class="custom-blue">Lorem ipsum blah blah blah</p>
-        </div>
+      <div class="textcontent text-left">
+        <h5 class="custom-blue">The Census Tree Team</h5>
+        <p class="custom-blue">Lorem ipsum blah blah blah</p>
+      </div>
 
-        <div class="textcontent text-left ">
-            <h5 class="custom-blue">Our Supporters</h5>
-            <p class="custom-blue">Lorem ipsum blah blah blah</p>
-        </div>
+      <div class="textcontent text-left">
+        <h5 class="custom-blue">Our Supporters</h5>
+        <p class="custom-blue">Lorem ipsum blah blah blah</p>
+      </div>
 
-        <div class="textcontent text-left ">
-            <h5 class="custom-blue">How to cite</h5>
-            <p class="custom-blue">Lorem ipsum blah blah blah</p>
-        </div>
-
-
+      <div class="textcontent text-left">
+        <h5 class="custom-blue">How to cite</h5>
+        <p class="custom-blue">Lorem ipsum blah blah blah</p>
+      </div>
     </div>
 
-    
     <!-- End of Main Container -->
 
     <!-- Footer -->
