--- a/get_the_data.html
+++ b/get_the_data.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-1 p-0">
       <div class="container-fluid custom-background">
         <div class="row">
           <div class="col-sm-4">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><img src="/images/Census_Tree_only_WH.png" style="width: 150px"
             /></a>
           </div>
@@ -59,10 +59,29 @@
                 </ul>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="index.html"
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-white mt-3"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
                   >Resources</a
                 >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Quick Start Guide</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Methodology</a></li>
+                  <li><a class="dropdown-item" href="#">FAQ</a></li>
+                  <li><a class="dropdown-item" href="#">Video Tutorials</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      >Research Using the Census Tree</a
+                    >
+                  </li>
+                  <li><a class="dropdown-item" href="#">How to Cite?</a></li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a
@@ -90,7 +109,7 @@
 
     <!-- Main Container -->
 
-    <div class="container-fluid custom-background p-1 mt-1 mb-5">
+    <div class="container-fluid custom-background p-3 mt-1 mb-1">
       <h3 class="text-left text-white p-2 mb-1 mt-1">Access the links</h3>
       <div class="row">
         <div class="col-md-8 table-container ml-5">
@@ -459,7 +478,7 @@
     <!-- End of Main Container -->
 
     <!-- Footer -->
-    <footer class="mt-1 mb-1 p-1 text-white custom-background">
+    <footer class="mt-0 p-3 text-white custom-background">
       <h4>
         <img
           src="/images/acknowledgements-with-logo.png"
