--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-1 p-0">
       <div class="container-fluid custom-background">
         <div class="row">
           <div class="col-sm-4">
@@ -58,10 +58,29 @@
                 </ul>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="#Resources"
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-white mt-3"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
                   >Resources</a
                 >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Quick Start Guide</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Methodology</a></li>
+                  <li><a class="dropdown-item" href="#">FAQ</a></li>
+                  <li><a class="dropdown-item" href="#">Video Tutorials</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      >Research Using the Census Tree</a
+                    >
+                  </li>
+                  <li><a class="dropdown-item" href="#">How to Cite?</a></li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a
@@ -89,8 +108,7 @@
 
     <!-- Main Container -->
 
-    <div class="container-fluid custom-background p-1 mt-1">
-      
+    <div class="container-fluid custom-background p-2 mb-0">
       <div class="row">
         <div class="col-sm-6">
           <div class="w-100 p-5 mt-1 mb-1">
@@ -135,40 +153,12 @@
           </div>
         </div>
       </div>
-
-      <h3 id="Resources" class="fs-1 p-5 mt-5 mb-1 text-left">
-        <img src="/images/resources-with-logo.png" style="width: 20%" />
-      </h3>
-      <div class="w-100 p-5 mt-1 mb-5">
-        <div class="row mt-5 mb-5">
-          <div class="col-sm-4">
-            <img src="/images/quick-start-guide.png" , style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/methodology.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/faq.png" style="width: 80%" />
-          </div>
-        </div>
-
-        <div class="row mt-5 mb-5">
-          <div class="col-sm-4">
-            <img src="/images/video-tutorials.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/research.png" style="width: 80%" />
-          </div>
-          <div class="col-sm-4">
-            <img src="/images/how-to-cite.png" style="width: 80%" />
-          </div>
-        </div>
-      </div>
+      
     </div>
     <!-- End of Main Container -->
 
     <!-- Footer -->
-    <footer class="mt-1 p-1 text-white custom-background">
+    <footer class="mt-1 p-3 text-white custom-background">
       <h4>
         <img
           src="/images/acknowledgements-with-logo.png"
