--- a/get_the_data.html
+++ b/get_the_data.html
@@ -73,14 +73,12 @@
                     <a class="dropdown-item" href="#">Quick Start Guide</a>
                   </li>
                   <li><a class="dropdown-item" href="#">Methodology</a></li>
-                  <li><a class="dropdown-item" href="#">FAQ</a></li>
                   <li><a class="dropdown-item" href="#">Video Tutorials</a></li>
                   <li>
                     <a class="dropdown-item" href="#"
                       >Research Using the Census Tree</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">How to Cite?</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -485,7 +483,7 @@
           style="width: 220px; height: 45px"
         />
       </h4>
-      <p class="text-center">
+      <p class="text-left">
         This work was supported by the National Science Foundation (Grant
         #XXXXX) and the Russell Sage Foundation (#GXXXX). We are grateful for
         the excellant work of research assistants at the
