--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             /></a>
           </div>
           <div class="col-sm-8">
-            <h1 class="mt-4 text-white">Census Tree</h1>
+            <h1 class="mt-5 text-white fw-bold custom-font">Census Tree</h1>
           </div>
         </div>
         <button
@@ -42,7 +42,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle text-white mt-3"
+                  class="nav-link dropdown-toggle text-white mt-3 fw-bold"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -52,15 +52,15 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="about.html">Overview</a>
+                    <a class="dropdown-item custom-blue" href="about.html">Overview</a>
                   </li>
-                  <li><a class="dropdown-item" href="#">Our Team</a></li>
+                  <li><a class="dropdown-item custom-blue" href="#">Our Team</a></li>
                 </ul>
               </li>
 
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle text-white mt-3"
+                  class="nav-link dropdown-toggle text-white mt-3 fw-bold"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -69,12 +69,12 @@
                 >
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="#">Quick Start Guide</a>
+                    <a class="dropdown-item custom-blue" href="#">Quick Start Guide</a>
                   </li>
-                  <li><a class="dropdown-item" href="#">Methodology</a></li>
-                  <li><a class="dropdown-item" href="#">Video Tutorials</a></li>
+                  <li><a class="dropdown-item custom-blue" href="#">Methodology</a></li>
+                  <li><a class="dropdown-item custom-blue" href="#">Video Tutorials</a></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item custom-blue" href="#"
                       >Research Using the Census Tree</a
                     >
                   </li>
@@ -83,13 +83,13 @@
 
               <li class="nav-item">
                 <a
-                  class="nav-link text-white mt-3"
+                  class="nav-link text-white mt-3 fw-bold"
                   href="https://sites.google.com/view/family-tree-faq/home"
                   >FAQ</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white mt-3" href="#">Contact</a>
+                <a class="nav-link text-white mt-3 fw-bold" href="#">Contact</a>
               </li>
 
               <li class="nav-item">
