--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary mb-1 p-0">
-      <div class="container-fluid custom-background">
+      <div class="container-fluid custom-background p-3">
         <div class="row">
           <div class="col-sm-4">
             <a class="navbar-brand" href="#"
@@ -69,12 +69,22 @@
                 >
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item custom-blue" href="#">Quick Start Guide</a>
+                    <a class="dropdown-item custom-blue" href="quick_start_guide.html"
+                      >Quick Start Guide</a
+                    >
                   </li>
-                  <li><a class="dropdown-item custom-blue" href="#">Methodology</a></li>
-                  <li><a class="dropdown-item custom-blue" href="#">Video Tutorials</a></li>
                   <li>
-                    <a class="dropdown-item custom-blue" href="#"
+                    <a class="dropdown-item custom-blue" href="methodology.html"
+                      >Methodology</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item custom-blue" href="video_tutorials.html"
+                      >Video Tutorials</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item custom-blue" href="research_using_census_tree.html"
                       >Research Using the Census Tree</a
                     >
                   </li>
