--- a/video_tutorials.html
+++ b/video_tutorials.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Census Tree: About</title>
+    <title>Census Tree: Video Tutorials</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,9 +52,13 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item custom-blue" href="about.html">Overview</a>
+                    <a class="dropdown-item custom-blue" href="about.html"
+                      >Overview</a
+                    >
                   </li>
-                  <li><a class="dropdown-item custom-blue" href="#">Our Team</a></li>
+                  <li>
+                    <a class="dropdown-item custom-blue" href="#">Our Team</a>
+                  </li>
                 </ul>
               </li>
 
@@ -116,39 +120,18 @@
     </nav>
 
     <!-- Main Container -->
-    <div class="container p-5 mt-1 ml-1 mb-5">
+    <div class="content-wrapper p-5 mt-1 ml-1 mb-0">
       <div class="about-logo p-1 ml-1 mt-5 mb-5">
-        <img
-          src="/images/about-with-logo.png"
-          style="width: 120px; height: 50px"
-        />
+        <h2 class="custom-blue">Video Tutorials</h2>
       </div>
 
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">The Census Tree</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">The Census Tree Team</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">Our Supporters</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">How to cite</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
+      <p class="custom-blue">Lorem ipsum blah blah blah</p>
     </div>
 
     <!-- End of Main Container -->
 
     <!-- Footer -->
-    <footer class="mt-1 p-3 text-white custom-background">
+    <footer class="footer mt-5 mb-1 p-5 text-white custom-background">
       <h4>
         <img
           src="/images/acknowledgements-with-logo.png"
