--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" , href="style.css" />
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico?v=2">
   </head>
   <body>
     <!-- Navbar -->
@@ -54,7 +57,7 @@
                   <li>
                     <a class="dropdown-item custom-blue" href="about.html">Overview</a>
                   </li>
-                  <li><a class="dropdown-item custom-blue" href="#">Our Team</a></li>
+                  <li><a class="dropdown-item custom-blue" href="personnel.html">Our Team</a></li>
                 </ul>
               </li>
 
@@ -124,25 +127,27 @@
         />
       </div>
 
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">The Census Tree</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">The Census Tree Team</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">Our Supporters</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
-
-      <div class="textcontent text-left">
-        <h5 class="custom-blue">How to cite</h5>
-        <p class="custom-blue">Lorem ipsum blah blah blah</p>
-      </div>
+    <h5 class="custom-blue">Project Summary</h1> 
+    <p class="custom-blue">This project contains the largest-ever database of digitized, 
+        linked census records for people living in the United States between 
+        1850 and 1950. It also increases the representation of women and minority 
+        groups in the data.
+    </p> 
+    <p class="custom-blue">
+        State-of-the-art 
+        handwriting recognition tools are used to digitize millions of census, vital 
+        statistics, and other records. The database can be used in 
+        promising research in the social, behavioral, and economic sciences 
+        that would not otherwise be possible. 
+    </p>
+    <p class="custom-blue">
+        For example, the data allows researchers to measure the 
+        intergenerational transmission of wealth or education, and to 
+        estimate the long-term impacts of childhood circumstances. 
+    </p>
+    <h5 class="custom-blue">How to cite</h5>
+	    <p class="custom-blue">You can cite this work using this <a href="https://arxiv.org/abs/2305.16275">paper</a></p>
+        </div>
     </div>
 
     <!-- End of Main Container -->
