--- a/get_the_data.html
+++ b/get_the_data.html
@@ -482,6 +482,15 @@
           </p>
         </div>
       </div>
+      <h3 class="text-left text-white p-2 mb-1 mt-1">Download the model</h3>
+      <p class="text-left text-white p-2 mb-1 mt-1">
+        We are commmitted to making data available so that other investigators
+        can use it for their research.
+      </p>
+    <ul>
+    <li class="text-white">You can download the training data <a href="dataset.tar.gz">here</a>
+    <li class="text-white">You can find the source code for the model and the trained model in this <a href="https://github.com/byuawsfhtl/HandwritingRecognition/releases/tag/v1.0.0"> Github Repository</a>
+    </ul> 
     </div>
     <!-- End of Main Container -->
 
