--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" , href="style.css" />
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico?v=2">
   </head>
   <body>
     <!-- Navbar -->
@@ -54,7 +57,7 @@
                   <li>
                     <a class="dropdown-item custom-blue" href="about.html">Overview</a>
                   </li>
-                  <li><a class="dropdown-item custom-blue" href="#">Our Team</a></li>
+                  <li><a class="dropdown-item custom-blue" href="personnel.html">Our Team</a></li>
                 </ul>
               </li>
 
