--- a/get_the_data.html
+++ b/get_the_data.html
@@ -12,6 +12,9 @@
     />
 
     <link rel="stylesheet" , href="style.css" />
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico?v=2">
   </head>
   <body>
     <!-- Navbar -->
@@ -55,7 +58,7 @@
                   <li>
                     <a class="dropdown-item custom-blue" href="about.html">Overview</a>
                   </li>
-                  <li><a class="dropdown-item custom-blue" href="#">Our Team</a></li>
+                  <li><a class="dropdown-item custom-blue" href="personnel.html">Our Team</a></li>
                 </ul>
               </li>
 
