--- a/personnel.html
+++ b/personnel.html
@@ -12,17 +12,9 @@
     />
     <link rel="icon"
       type="image/png"
-      href="favicon.ico">
+      href="favicon.ico?v=2">
 
-    <style>
-      .custom-background {
-        background-color: #3b5d80;
-      }
-
-      .custom-color {
-        color: #b8d637;
-      }
-    </style>
+    <link rel="stylesheet" , href="style.css" />
   </head>
   <body>
     <!-- Navbar -->
