--- a/quick_start_guide.html
+++ b/quick_start_guide.html
@@ -11,6 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" , href="style.css" />
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico?v=2">
   </head>
   <body>
     <!-- Navbar -->
@@ -56,9 +59,7 @@
                       >Overview</a
                     >
                   </li>
-                  <li>
-                    <a class="dropdown-item custom-blue" href="#">Our Team</a>
-                  </li>
+                  <li><a class="dropdown-item custom-blue" href="personnel.html">Our Team</a></li>
                 </ul>
               </li>
 
