--- a/video_tutorials.html
+++ b/video_tutorials.html
@@ -10,6 +10,9 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico?v=2">
     <link rel="stylesheet" , href="style.css" />
   </head>
   <body>
@@ -56,9 +59,7 @@
                       >Overview</a
                     >
                   </li>
-                  <li>
-                    <a class="dropdown-item custom-blue" href="#">Our Team</a>
-                  </li>
+                  <li><a class="dropdown-item custom-blue" href="personnel.html">Our Team</a></li>
                 </ul>
               </li>
 
